@@ -97,4 +97,5 @@ BUGFIXES:
 075 ==> 456749 - Cross-platform filename support.
 076 ==> 424965 - Provide UI for Database Network Share for multiple mountpaths.
 077 ==> 310106 - MYSQL : try to access to database from two computers and collections get lost.
-078 ==> 
+078 ==> 456591 - No warning when delete folder not empty.
+079 ==> 
